# app/docs/swagger.json
@@ -350,6 +350,11 @@
                     "maxLength": 10000,
                     "minLength": 1
                 },
+                "maxViewCount": {
+                    "type": "integer",
+                    "maximum": 100,
+                    "minimum": 0
+                },
                 "passphrase": {
                     "type": "string",
                     "maxLength": 500
